Assign judges step complete, you can now assign judges to any question.

--- a/src/steps/UploadFileStep.css
+++ b/src/steps/UploadFileStep.css
@@ -25,10 +25,10 @@
     border: none;
     outline: none;
     font-size: 16px;
-    resize: none;
     overflow: auto;
     line-height: 1.5;
     box-sizing: border-box;
+    min-height: 45px;
     max-height: 600px;
 }
 
