--- a/src/steps/AssignJudgesStep.css
+++ b/src/steps/AssignJudgesStep.css
@@ -13,6 +13,7 @@
     border-radius: 10px;
     padding: 1.2rem;
     background: #fff;
+    width: 100%;
 }
 
 .assign-judges-queue, .assign-judges-labelingTask, .assign-judges-createdAt {
